<resources>
    <string name="app_name">NearestToiletPL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_title">find the nearest restroom</string>
    <string name="wrong_location_title">we are sorry, our app is not supporting your location</string>
    <string name="wrong_location_subtitle">please wait for the update for the country you are in... or visit Poland :)</string>
    <string name="retry">RETRY</string>
    <string name="request_location_title">i need an access to your location!</string>
    <string name="request_location_subtitle">grant an access to your location to allow the app to give you the results</string>
    <string name="request_location_button">grant permission</string>

    <string name="service_unavailable">service unavailable</string>
    <string name="no_internet_alert">lost connection to the Internet, please try again later...</string>

    <string name="title_activity_maps">Map</string>
    <string name="navigate">navigate</string>
    <string name="rate">rate</string>
    <string name="overall_rate">overall rate</string>
    <string name="perks">additional perks</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
</resources>