<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.rate_toilet.RateToiletFragment">

    <ImageView
        android:id="@+id/toiletIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/toilet"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toiletName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toiletName"
        style="@style/AppWidgetStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingRight="76dp"
        android:text="Testowa nazwa"
        android:textColor="@color/dark_gray_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/toiletIcon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/toiletIcon"
        app:layout_constraintTop_toTopOf="@id/toiletIcon" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@color/dark_gray_color"
        app:layout_constraintTop_toBottomOf="@id/toiletName" />

    <TextView
        android:id="@+id/overallRateTitle"
        style="@style/AppWidgetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:paddingRight="76dp"
        android:text="@string/overall_rate"
        android:textColor="@color/dark_gray_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numStars="4"
        android:stepSize="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overallRateTitle" />

    <TextView
        android:id="@+id/perksTitle"
        style="@style/AppWidgetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/perks"
        android:textColor="@color/dark_gray_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <LinearLayout
        android:id="@+id/perksContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/perksTitle" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@drawable/blue_rounded_corners"
        android:text="@string/accept"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/perksContainer" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_gray_rounded_corners"
        android:text="@string/cancel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnAccept"
        app:layout_constraintTop_toBottomOf="@id/perksContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>